feat: add auth, notifications, sensor updates, and route enhancements